--- a/404.html
+++ b/404.html
@@ -9,13 +9,13 @@
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="https://williambrace.github.io/404.html">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.6a98292fb8fa8cf0f3ba4042d4b75515c04267550f3ad49ff6271b5af9562443.css" integrity="sha256-apgpL7j6jPDzukBC1LdVFcBCZ1UPOtSf9icbWvlWJEM=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://williambrace.github.io/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://williambrace.github.io/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://williambrace.github.io/favicon-32x32.png">
-<link rel="apple-touch-icon" href="https://williambrace.github.io/apple-touch-icon.png">
-<link rel="mask-icon" href="https://williambrace.github.io/safari-pinned-tab.svg">
+<link rel="canonical" href="https://william-brace.github.io/williambrace.github.io/404.html">
+<link crossorigin="anonymous" href="/williambrace.github.io/assets/css/stylesheet.6a98292fb8fa8cf0f3ba4042d4b75515c04267550f3ad49ff6271b5af9562443.css" integrity="sha256-apgpL7j6jPDzukBC1LdVFcBCZ1UPOtSf9icbWvlWJEM=" rel="preload stylesheet" as="style">
+<link rel="icon" href="https://william-brace.github.io/williambrace.github.io/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://william-brace.github.io/williambrace.github.io/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://william-brace.github.io/williambrace.github.io/favicon-32x32.png">
+<link rel="apple-touch-icon" href="https://william-brace.github.io/williambrace.github.io/apple-touch-icon.png">
+<link rel="mask-icon" href="https://william-brace.github.io/williambrace.github.io/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
 <noscript>
@@ -57,7 +57,7 @@
 </noscript><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://williambrace.github.io/404.html" />
+<meta property="og:url" content="https://william-brace.github.io/williambrace.github.io/404.html" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
@@ -80,7 +80,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://williambrace.github.io/" accesskey="h" title="My New Hugo Site (Alt + H)">My New Hugo Site</a>
+            <a href="https://william-brace.github.io/williambrace.github.io/" accesskey="h" title="My New Hugo Site (Alt + H)">My New Hugo Site</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -113,7 +113,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2023 <a href="https://williambrace.github.io/">My New Hugo Site</a></span>
+    <span>&copy; 2023 <a href="https://william-brace.github.io/williambrace.github.io/">My New Hugo Site</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
